--- a/www/partials/managepatient/chat-detail.html
+++ b/www/partials/managepatient/chat-detail.html
@@ -1,5 +1,10 @@
-<ion-view view-title="{{PatientName}}" id = "userMessagesView">    
-    <ion-content class="padding" start-y="120">
+<ion-view view-title="{{PatientName}}" id = "userMessagesView">   
+<!-- <ion-header-bar class="bar-subheader bar-stable">
+        <h2>{{Name}}      {{gender}}        {{age}}岁<button class="button icon-right" ng-click="backtocoach()">返回主页</button></h2>
+
+        
+</ion-header-bar> -->
+    <ion-content class="padding has-subheader" start-y="120">
         <div style="position:relative;bottom:{{Dialog.SMSbottom}}">
             <ion-refresher pulling-text="下拉加载更多。。。" spinner='ripple' refreshing-text="努力加载中" on-refresh="DisplayMore()">
             </ion-refresher>
