--- a/www/partials/individual/coach.html
+++ b/www/partials/individual/coach.html
@@ -5,7 +5,7 @@ navigation history that also transitions its views in and out.
 -->
 
 
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+
 
   
 <!--   <ion-tab title="主页" icon-off="ion-ios-home" icon-on="ion-ios-home-outline" href="#/coach/home">
@@ -31,11 +31,11 @@ navigation history that also transitions its views in and out.
   <ion-nav-view name="coach-personalinfo"></ion-nav-view>
   <ion-nav-view name="coach-schedule"></ion-nav-view> -->
 <!-- <ion-footer-bar> -->
-  <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
+  <ion-nav-bar class="bar-positive nav-title-slide-ios7">
     <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button>
   </ion-nav-bar> 
-     
+  <ion-tabs class="tabs-icon-top tabs-color-active-positive">  
   <ion-tab title="我的患者" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/coach/patients">
     <ion-nav-view name="coach-patients"></ion-nav-view>
   </ion-tab>  
