--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -1,93 +1,73 @@
 <ion-view title="临床信息">
 <ion-header-bar class="bar-subheader bar-stable">
-<div class="row" style="padding:0px">
-	<div class="col-75"><h3>{{Name}}      {{gender}}        {{age}}岁
-
-	</h3></div>
-	<div  class="col-25 text-right"> <button class="button icon-right" ng-click="backtocoach()">返回主页
-	</button></div>
-	
-</div>
-
-
+	<div class="row" style="padding:0px">
+		<div class="col-75">
+			<h3>{{Name}}      {{gender}}        {{age}}岁</h3>
+		</div>
+		<div  class="col-25 text-right"> 
+			<button class="button icon-right" ng-click="backtocoach()">返回主页</button>
+		</div>	
+	</div>
 </ion-header-bar>
-<ion-content class="padding has-subheader">
 
-<div class="row">
-	<div class="col">
-		<div class="item item-select" style="height:52px"> 
-			<select>
-				<option selected>海军总医院</option>
-			</select>
-		</div>
-	</div>
-	<div class="col ">
-		<div class="item item-input-inset">
-			<p>就诊ID</p>
-			<label class="item-input-wrapper">
-				<input type="text" ng-model="HJZYYID">
-			</label>
-			
-		</div>
-	</div>
-</div>
-
-<div class="row">
+<ion-content class="padding has-subheader content-item-list">
 	<div class="row">
-		<div class="col col-80">
-
-			<ionic-datepicker input-obj="datepickerObject"class="col col=80 " >
-			<button class="button button-block button-positive" >起始日期{{tt}}</button>
-		</ionic-datepicker>
-		
-
+		<div class="col-50">
+			<div class="item item-select" style="height:52px"> 
+				<select>
+					<option selected>海军总医院</option>
+				</select>
+			</div>
+		</div>
+		<div class="col-50 ">
+			<div class="item item-input-inset">
+				<p>就诊ID</p>
+				<label class="item-input-wrapper">
+					<input type="text" ng-model="HJZYYID">
+				</label>
+				
+			</div>
+		</div>
 	</div>
-	<div class="col ">
-		<button class="button button-block button-positive" ng-click="synclinicinfo()" >同步</button>
-	</div>
-</div>
-</div>
 
-<div style="width: 100% ">
-	<ion-nav-view name="clinicinfo" style="height=100px;border-style: ridge">
+	<div class="row">
+		<div class="col-75" style="padding-right:2%" >
+			<ionic-datepicker input-obj="datepickerObject" >
+			<button class="button button-block button-stable" >起始日期{{tt}}</button>
+			</ionic-datepicker>
+		</div>
+		<div class="col-25 ">
+			<button class="button button-block  button-balanced" ng-click="synclinicinfo()" >同步</button>
+		</div>
+	</div>
 
 	<ion-list >
-
-
-
-	<ion-item ng-repeat='item in cliniclist | orderBy : "-AdmissionDate"'  >
-	<div class="row">
-		<h2 >出院时间：{{item.DischargeDate}} </h2>
-	</div>
-	<div class="row">
-		<h2 >出院时间：{{item.DischargeDate}} </h2>
-		
-	</div>
-
-	<div class="row">
-		<h2 >就诊号：{{item.VisitId}}</h2>
-	</div>
-	<div>
-		<div class="col col-50">查看详情：<button ng-click="openexaminfomodal(cliniclist.indexOf(item))">检查</button> 
-			<button ng-click="opendruginfomodal(cliniclist.indexOf(item))">用药</button> 
-			<button ng-click="opendiaginfomodal(cliniclist.indexOf(item))">诊断</button></div>
-</div>		<!-- <option selected >查看详细信息</option>
-		<option ng-model='examValue' ng-change="openinfomodal(examValue)">检查信息</option>
-		<option ng-model='drugValue' ng-change="openinfomodal(drugValue)">用药信息</option>
-		<option >诊断信息</option> -->
-		
-	</div>
-<!-- 
-<div class="row"> ng-click="openinfomodal()"
-<h2 class="col col-50">开始时间：{{item.StartDateTime}}</h2>
-<h2 class="col col-50">结束时间：{{item.StopDateTime}} </h2>
-</div>
-<div class="row">
-<h2 class="col col-50">给药频率：{{item.Frequency}} </h2>
-</div> -->
-</ion-item>
-
-
+		<ion-item class="item-margin" ng-repeat='item in cliniclist | orderBy : "-AdmissionDate"'  >
+		<div class="row">
+			<h2 >入院时间：{{item.DischargeDate}} </h2>
+		</div>
+		<div class="row">
+			<h2 >出院时间：{{item.DischargeDate}} </h2>		
+		</div>
+		<div class="row">
+			<h2 >就诊号：{{item.VisitId}}</h2>
+		</div>
+		<div class="row">
+			<!-- <div class="col col-33">查看详情：
+			</div> -->
+			<div class="col-67">
+				<div class="button-bar">
+					<button class="button button-small button-outline button-positive" ng-click="openexaminfomodal(cliniclist.indexOf(item))">检查</button> 
+					<button class="button button-small button-outline button-positive"  ng-click="opendruginfomodal(cliniclist.indexOf(item))">用药</button> 
+					<button class="button button-small button-outline button-positive"  ng-click="opendiaginfomodal(cliniclist.indexOf(item))">诊断</button>
+				</div>
+			</div>
+	    </div>		<!-- <option selected >查看详细信息</option>
+			<option ng-model='examValue' ng-change="openinfomodal(examValue)">检查信息</option>
+			<option ng-model='drugValue' ng-change="openinfomodal(drugValue)">用药信息</option>
+			<option >诊断信息</option> -->
+		</ion-item>
+	</ion-list>
 
 
 
