--- a/www/css/style.css
+++ b/www/css/style.css
@@ -32,6 +32,7 @@
 
 .processbar{
 	background-color:#3aa7dd;
+  /*background-color:#efffc1;*/
 	height:100%;
 }
 
@@ -87,4 +88,13 @@
   width: 100%;
   height: 500px;
   font-size : 11px;
+}
+
+.content-item-list{
+  background-color:#EEEEEE;
+  padding-top:0 !important;
+}
+.item-margin{
+  padding:2px;
+  margin:6px;
 }
