--- a/www/partials/managepatient/chat-detail.html
+++ b/www/partials/managepatient/chat-detail.html
@@ -4,7 +4,7 @@
 
         
 </ion-header-bar> -->
-    <ion-content class="padding has-subheader" start-y="120">
+    <ion-content class="padding" start-y="120">
         <div style="position:relative;bottom:{{Dialog.SMSbottom}}">
             <ion-refresher pulling-text="下拉加载更多。。。" spinner='ripple' refreshing-text="努力加载中" on-refresh="DisplayMore()">
             </ion-refresher>
